testdata/e2e/examples/bindings/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bindings
spec:
  bindings:
  - name: a
    value: 1
  steps:
  - bindings:
    - name: b
      value: 2
    try:
    - apply:
        template: true
        bindings:
        - name: c
          value: ($a + $b)
        resource:
          apiVersion: v1
          kind: ConfigMap
          metadata:
            name: quick-start
          data:
            foo: (to_string($c))
  - bindings:
    - name: b
      value: 2
    try:
    - assert:
        bindings:
        - name: c
          value: ($a + $b)
        resource:
          apiVersion: v1
          kind: ConfigMap
          metadata:
            name: quick-start
          data:
            foo: (to_string($c))
